Bug 427077 - Focus not on search bar when started
Summary: Focus not on search bar when started
Status: RESOLVED FIXED
Alias: None
Product: kiten
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Joseph Kerian
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-28 16:08 UTC by Samuel Gilbert
Modified: 2020-11-15 11:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Gilbert 2020-09-28 16:08:07 UTC
SUMMARY
When started, the focus is on the empty result box instead of being on the search bar.


STEPS TO REPRODUCE
1. Launch kiten

OBSERVED RESULT
Get the focus on the result box

EXPECTED RESULT
The focus should be on the search bar to be ready to type and search

SOFTWARE/OS VERSIONS
Kiten version: 20.08.1
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 1 Bug Janitor Service 2020-11-14 17:58:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/kiten/-/merge_requests/10
Comment 2 Frédéric Brière 2020-11-15 11:13:56 UTC
Git commit 5c80351ead6b3711cacaf5645aac98cb5534b5cf by Frédéric Brière.
Committed on 14/11/2020 at 17:55.
Pushed by aacid into branch 'master'.

Set initial focus on the search bar on startup

M  +1    -1    app/kiten.cpp
M  +1    -3    app/searchstringinput.h

https://invent.kde.org/education/kiten/commit/5c80351ead6b3711cacaf5645aac98cb5534b5cf
Comment 3 Albert Astals Cid 2020-11-15 11:14:38 UTC
Git commit 07ca88d6c311224ea37778b06620dfcaa6d2cf2d by Albert Astals Cid, on behalf of Frédéric Brière.
Committed on 15/11/2020 at 11:14.
Pushed by aacid into branch 'release/20.12'.

Set initial focus on the search bar on startup

M  +1    -1    app/kiten.cpp
M  +1    -3    app/searchstringinput.h

https://invent.kde.org/education/kiten/commit/07ca88d6c311224ea37778b06620dfcaa6d2cf2d