Set initial focus on the search bar on startup

BUG: 427077